<resources>
    <string name="app_name">wifi密码工具</string>
    <string name="wifi_name">wifi名称：</string>
    <string name="one_try_time_ms">单个最大尝试时间(ms)：</string>
    <string name="try_time">8000</string>
    <string name="dictionary_file">字典文件：</string>
    <string name="input_tip">---请选择---</string>
    <string name="start_line">开始行数：</string>
    <string name="_1">1</string>
    <string name="startbtn">开始运行</string>
    <string name="run_output">运行输出</string>
    <string name="auto_scroll">自动滚动</string>
    <string name="copy_str">复制</string>
    <string name="clear_output">清空</string>
    <string name="choose_wifi">选择</string>
    <string name="progress_tip">等待开始运行</string>
    <string name="settings">设置</string>
    <string name="wifi_icon_description">WiFi图标</string>
    <string name="select_network_button_text">选择</string>
    <string name="cancel_button_text">取消</string>
    <string name="uninstall_title">⚡️你⚡️卸⚡️你⚡️大⚡️坝⚡️</string>
    <string name="uninstall_tip">吾日三省吾身：观人妙作，而不赞乎？观其有益，不纳藏乎？得其所用，而不币之乎？\n注释：①〔赞〕点赞 ②〔藏〕收藏 ③〔币〕投币，这里名词用作作动词，指为…而投币（刻意强调）\n\n（我们专门为小米手机桌面卸载添加了提示，提升用户体验）</string>
    <string name="app_description">一款通过暴力破解密码本的方式连接wifi的工具</string>
</resources>

